# KumsalMeldi

./: config.py  pyproject.toml
AloneMusic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
AloneMusic/plugins/bot/: help.py  start.py
AloneMusic/plugins/play/: play.py
AloneMusic/plugins/tools/: as.py  astro_fal_ruya.py  cash.py  chatbot.py  dc.py  ig.py  kumsal.py  kumsal_tagger.py  oner.py  q.py  s.py  song.py  tagger.py
AloneMusic/utils/inline/: help.py  play.py  start.py
cookies/: cookies.txt
strings/: helpers.py
strings/langs/: en.yml
