[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AloneMusic"
version = "0.1.0"
description = "🎵 Advanced Telegram Music Bot by TheAloneTeam — PyroFork + ntgcalls + YouTube + Spotify"
readme = "README.md"
requires-python = ">=3.10,<3.13"

license = { text = "MIT" }

authors = [
  { name = "TheAloneTeam", email = "thealoneteam@github.com" }
]

keywords = ["telegram", "music", "bot", "pyrogram", "pyrofork", "youtube", "spotify"]

classifiers = [
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Utilities",
]

dependencies = [
  "aiofiles>=23.2.1",
  "aiohttp>=3.9.5",
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "dnspython>=2.6.1",
  "gitpython>=3.1.43",
  "hachoir>=3.2.0",
  "httpx[http2]",
  "humanize>=4.9.0",
  "requests>=2.32.3",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "unidecode>=1.3.8",
  "tgcrypto>=1.2.5",

  # Telegram
  "pyrofork>=2.3.45",
  "ntgcalls==2.1.0",

  # Media
  "ffmpeg-python>=0.2.0",
  "yt-dlp[default]>=2025.12.8",
  "youtube-search>=2.1.2",
  "youtube-search-python>=1.6.6",
  "py-yt-search==0.5.7",

  # Spotify
  "spotipy>=2.24.0",

  # Database
  "motor>=3.4.0",

  # Utilities
  "psutil>=5.9.8",
  "Pillow>=10.0.0",
  "prettytable>=3.12.0",
  "speedtest-cli>=2.1.3",

  # Optional helpers
  "bing-image-downloader",
  "googlesearch-python",
  "gtts",
  "numpy",
]

[tool.setuptools.packages.find]
include = ["AloneMusic*", "core*", "config*", "strings*"]

[project.urls]
Repository = "https://github.com/TheAloneTeam/AloneMusic"
Issues = "https://github.com/TheAloneTeam/AloneMusic/issues"

[project.scripts]
alonemusic = "AloneMusic.__main__:main"